--- a/Semana 08/E2ControleDeFuncionarios/src/main/java/view/TelaFuncionario.form
+++ b/Semana 08/E2ControleDeFuncionarios/src/main/java/view/TelaFuncionario.form
@@ -49,29 +49,30 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace min="-2" pref="76" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
+                      <Group type="102" attributes="0">
+                          <Component id="btnIncluir" linkSize="4" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="45" max="-2" attributes="0"/>
+                          <Component id="btnBuscar" linkSize="4" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
+                          <Component id="btnAlterar" linkSize="4" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="43" max="-2" attributes="0"/>
+                          <Component id="btnExcluir" linkSize="4" min="-2" max="-2" attributes="0"/>
+                      </Group>
                       <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                       <Group type="102" attributes="0">
+                          <EmptySpace min="-2" pref="13" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="1" attributes="0">
-                              <Component id="btnIncluir" min="-2" max="-2" attributes="0"/>
                               <Component id="lblSalario" linkSize="3" min="-2" max="-2" attributes="0"/>
                               <Component id="lblIdentidade" linkSize="3" min="-2" max="-2" attributes="0"/>
                               <Component id="lblNome" linkSize="3" min="-2" max="-2" attributes="0"/>
                               <Component id="lblCpf" linkSize="3" min="-2" max="-2" attributes="0"/>
                           </Group>
+                          <EmptySpace min="88" pref="88" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Group type="102" attributes="0">
-                                  <EmptySpace min="88" pref="88" max="-2" attributes="0"/>
-                                  <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="tfdIdentidade" min="-2" pref="210" max="-2" attributes="0"/>
-                                      <Component id="tfdCpf" min="-2" pref="210" max="-2" attributes="0"/>
-                                      <Component id="tfdSalario" min="-2" pref="210" max="-2" attributes="0"/>
-                                      <Component id="tfdNome" alignment="0" min="-2" pref="255" max="-2" attributes="0"/>
-                                  </Group>
-                              </Group>
-                              <Group type="102" alignment="0" attributes="0">
-                                  <EmptySpace min="-2" pref="38" max="-2" attributes="0"/>
-                                  <Component id="btnBuscar" min="-2" max="-2" attributes="0"/>
-                              </Group>
+                              <Component id="tfdIdentidade" min="-2" pref="210" max="-2" attributes="0"/>
+                              <Component id="tfdCpf" min="-2" pref="210" max="-2" attributes="0"/>
+                              <Component id="tfdSalario" min="-2" pref="210" max="-2" attributes="0"/>
+                              <Component id="tfdNome" alignment="0" min="-2" pref="255" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
@@ -104,12 +105,14 @@
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="11" max="-2" attributes="0"/>
+                  <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="btnIncluir" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="btnBuscar" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="btnAlterar" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="btnExcluir" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="203" max="32767" attributes="0"/>
+                  <EmptySpace pref="196" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -162,6 +165,19 @@
         <Component class="javax.swing.JLabel" name="jLabel1">
           <Properties>
             <Property name="text" type="java.lang.String" value="*&#xc9; obrigat&#xf3;rio o preenchimento de todos os campos acima para incluir um novo registro!"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JButton" name="btnAlterar">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Alterar"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnAlterarActionPerformed"/>
+          </Events>
+        </Component>
+        <Component class="javax.swing.JButton" name="btnExcluir">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Excluir"/>
           </Properties>
         </Component>
       </SubComponents>
